--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "build": "parcel build index.html --no-source-maps --no-content-hash"
   },
   "dependencies": {
+    "@popperjs/core": "^2.3.3",
+    "d3-geo": "^1.11.9",
+    "geojson": "^0.5.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
+    "react-popper": "^2.2.2",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.15",
     "styled-components": "^5.1.0",
+    "topojson-client": "^3.1.0",
     "use-resize-observer": "^6.1.0-alpha.1"
   },
   "devDependencies": {
