--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@popperjs/core": "^2.3.3",
     "d3-geo": "^1.11.9",
-    "geojson": "^0.5.0",
+    "polished": "^3.5.2",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "react-popper": "^2.2.2",
