--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "private": true,
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --no-source-maps --no-content-hash"
+    "build": "NODE_ENV=production parcel build index.html --no-source-maps --no-content-hash --experimental-scope-hoisting"
   },
   "dependencies": {
     "@popperjs/core": "^2.3.3",
-    "d3-geo": "^1.11.9",
+    "d3-geo": "^1.12.0",
     "polished": "^3.5.2",
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
+    "react": ">=16.13.1",
+    "react-dom": ">=16.13.1",
     "react-popper": "^2.2.2",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.15",
     "styled-components": "^5.1.0",
     "topojson-client": "^3.1.0",
-    "use-resize-observer": "^6.1.0-alpha.1"
+    "use-resize-observer": "^6.1.0-alpha.3"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.10.3"
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-bundle-visualiser": "^1.2.0"
   }
 }
