--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "author": "Chris Rowe | chriz001@gmail.com",
   "private": true,
   "scripts": {
-    "start": "parcel index.html",
-    "build": "NODE_ENV=production parcel build index.html --no-content-hash"
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@popperjs/core": "^2.3.3",
@@ -21,11 +21,13 @@
     "use-resize-observer": "^6.1.0-alpha.3"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
-  },
-  "browserslist": [
-    "> 1%",
-    "not dead",
-    "ie 11"
-  ]
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "html-webpack-plugin": "^4.3.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  }
 }
