--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.3.3",
+    "core-js": "^3.6.5",
     "d3-geo": "^1.12.0",
     "polished": "^3.5.2",
     "react": ">=16.13.1",
